--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    tools:context=".MainActivity"
+    android:background="#F9F9F9">
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Contact List"
+        android:text="📇 Contact List"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="@color/purple_700"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="12dp"/>
+        android:gravity="center"
+        android:padding="12dp"
+        android:background="@color/purple_500"
+        android:textColor="@android:color/white" />
 
-    <!-- RecyclerView hiển thị danh sách liên hệ -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
+        android:layout_below="@id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/tvTitle"
-        android:layout_marginBottom="80dp"
+        android:padding="10dp"
         android:clipToPadding="false" />
 
-    <!-- Nút thêm liên hệ mới -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_margin="20dp"
         android:contentDescription="Add Contact"
-        android:tint="@color/white"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="@android:color/white"
         app:backgroundTint="@color/purple_500" />
-
 </RelativeLayout>
