--- a/app/src/main/res/drawable/avatar_bg.xml
+++ b/app/src/main/res/drawable/avatar_bg.xml
@@ -1,8 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#E0E0E0" />
-    <stroke
-        android:width="2dp"
-        android:color="#BDBDBD" />
+    <solid android:color="#EDE7F6"/>
+    <stroke android:color="@color/purple_500" android:width="2dp"/>
 </shape>
